syntax = "proto3";

package hilo_rpc.proto;

import "hilo_rpc/proto/metadata.proto";
import "hilo_rpc/proto/sink.proto";
import "hilo_rpc/proto/source.proto";
import "hilo_rpc/proto/stage.proto";

message PipelineConfig {
    message Params {
        bool enable_cache = 1;
    }

    message Step {
        oneof step {
            string pipeline_path = 1;
            Pipeline pipeline = 2;
            Stage stage = 3;
        }
    }

    string root_dir = 1;
    Params params = 2;
    Source source = 3;
    Sink sink = 4;
    MetadataStoreConfig metadata = 5;
    repeated Step steps = 6;
}

message Pipeline {
    string id = 1;
    string name = 2;
    PipelineConfig config = 3;
}